fix(css): corrige l'alignement du bouton 'langues' (#1606)

--- a/front/src/components/header.module.scss
+++ b/front/src/components/header.module.scss
@@ -134,8 +134,8 @@
 /*
  * 3. Langues
  */
-.languagesMenu {
-  position: relative;
+.languagesMenu > button {
+  display: flex;
 }
 
 /*
